[gd_scene load_steps=12 format=3 uid="uid://bqs748q07ugmw"]

[ext_resource type="Texture2D" uid="uid://slxls3fi18ha" path="res://icon.svg" id="1_dcrto"]
[ext_resource type="Script" path="res://src/tests/test_ai_state_charts/player.gd" id="1_elhi2"]
[ext_resource type="Script" path="res://src/tests/test_ai_state_charts/test_enemy.gd" id="1_yxks0"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="3_g213i"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="4_wj4se"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="5_efky2"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="6_x3fgd"]
[ext_resource type="PackedScene" uid="uid://bcwkugn6v3oy7" path="res://addons/godot_state_charts/utilities/state_chart_debugger.tscn" id="8_7kjrb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_w170u"]
radius = 168.19

[sub_resource type="CircleShape2D" id="CircleShape2D_3gite"]
radius = 600.053

[sub_resource type="CircleShape2D" id="CircleShape2D_ad8om"]
radius = 320.0

[node name="TestAIStateCharts" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.5, 0.5)

[node name="Player" type="Node2D" parent="."]
position = Vector2(-888, -376)
script = ExtResource("1_elhi2")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
texture = ExtResource("1_dcrto")

[node name="Area2D" type="Area2D" parent="Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Area2D"]
shape = SubResource("CircleShape2D_w170u")

[node name="TestEnemy" type="Node2D" parent="."]
script = ExtResource("1_yxks0")

[node name="Sprite2D" type="Sprite2D" parent="TestEnemy"]
texture = ExtResource("1_dcrto")

[node name="Area2D" type="Area2D" parent="TestEnemy"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TestEnemy/Area2D"]
shape = SubResource("CircleShape2D_3gite")
debug_color = Color(0, 0.647059, 0.207843, 0.419608)

[node name="Area2D2" type="Area2D" parent="TestEnemy"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TestEnemy/Area2D2"]
shape = SubResource("CircleShape2D_ad8om")
debug_color = Color(0.960784, 0, 0.521569, 0.419608)

[node name="StateChart" type="Node" parent="TestEnemy"]
script = ExtResource("3_g213i")

[node name="Root" type="Node" parent="TestEnemy/StateChart"]
script = ExtResource("4_wj4se")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="TestEnemy/StateChart/Root"]
script = ExtResource("5_efky2")

[node name="OnPlayerEnter" type="Node" parent="TestEnemy/StateChart/Root/Idle"]
script = ExtResource("6_x3fgd")
to = NodePath("../../Detection")
event = &"enemy_entered"

[node name="Detection" type="Node" parent="TestEnemy/StateChart/Root"]
script = ExtResource("4_wj4se")
initial_state = NodePath("Observing")

[node name="Observing" type="Node" parent="TestEnemy/StateChart/Root/Detection"]
script = ExtResource("5_efky2")

[node name="OnPlayerExit" type="Node" parent="TestEnemy/StateChart/Root/Detection/Observing"]
script = ExtResource("6_x3fgd")
to = NodePath("../../../Idle")
event = &"enemy_exited"

[node name="OnPlayerClose" type="Node" parent="TestEnemy/StateChart/Root/Detection/Observing"]
script = ExtResource("6_x3fgd")
to = NodePath("../../Chasing")
event = &"enemy_chase"

[node name="Chasing" type="Node" parent="TestEnemy/StateChart/Root/Detection"]
script = ExtResource("5_efky2")

[node name="OnPlayerLost" type="Node" parent="TestEnemy/StateChart/Root/Detection/Chasing"]
script = ExtResource("6_x3fgd")
to = NodePath("../../Observing")
event = &"enemy_lost"

[node name="StateChartDebugger" parent="." instance=ExtResource("8_7kjrb")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 400.0
offset_top = 216.0
offset_right = 1115.0
offset_bottom = 598.0
grow_horizontal = 1
grow_vertical = 1
initial_node_to_watch = NodePath("../TestEnemy/StateChart")

[connection signal="area_entered" from="TestEnemy/Area2D" to="TestEnemy" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="TestEnemy/Area2D" to="TestEnemy" method="_on_area_2d_area_exited"]
[connection signal="area_entered" from="TestEnemy/Area2D2" to="TestEnemy" method="_on_chase_area_entered"]
[connection signal="area_exited" from="TestEnemy/Area2D2" to="TestEnemy" method="_on_chase_area_exited"]
[connection signal="state_processing" from="TestEnemy/StateChart/Root/Detection/Observing" to="TestEnemy" method="_on_observing_state_processing"]
[connection signal="state_physics_processing" from="TestEnemy/StateChart/Root/Detection/Chasing" to="TestEnemy" method="_on_chasing_state_physics_processing"]
[connection signal="state_processing" from="TestEnemy/StateChart/Root/Detection/Chasing" to="TestEnemy" method="_on_chasing_state_processing"]
